[BUGFIX] Removes overflow hidden on container; adds it to matrix wrapper

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -29,7 +29,7 @@ body.bg-dark {
   z-index: 100;
   padding: $headerHeight 1.5em 0 1.5em;
   margin: auto;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 
   //$baikal: 960px;
   //  $ontario: 767px;
